src/assets/css/main.css
.top-container {
  z-index: 2;
}

@media (min-width: 640px) {
  .top-wrap-height {
    height: 70vh;
    min-height: 350px;
  }
}

@media (max-width: 640px) {
  .top-wrap-height {
    height: 100px;
  }
}

#section-title {  
  font-family: Hind !important;
  color: #173e55 !important;
}

#section-text {  
  font-family: Hind !important;
  color: #173e55 !important;
}

#category {  
  font-family: Hind !important;
  font-weight: 500 !important;
}

.uk-section-primary {
  background: #173e55 !important;
}

.uk-button-primary {
  background-color: #f49d60 !important;
}

.uk-section {
  padding-top: 30px !important;
  padding-bottom: 30px !important;
  padding-left: 30px !important;
  padding-right: 30px !important;
}

.uk-text {  
  font-family: Hind !important;
}

.square30 {
  width:30vw !important; 
  height:30vw !important;
}

.square50 {
  width:50vw !important; 
  height:48vw !important;
  margin-right: 30px !important;
}

.square80 {
  width:80vw !important; 
  height:80vw !important;
  margin-bottom: 30px !important;
}

img:hover {  
  opacity: 1 !important;
  transition: opacity 0.25s cubic-bezier(0.39, 0.575, 0.565, 1) !important;
}

